Se agrego nuevo metodo a la clase Usuario para devolver el apellido + nombre. Se agrego MapUsuarios a ListarUsuariosBean para ordenar alfabeticamente los usuarios. Se modificaron ListarUsuarios e InformacionCurso para listar usuarios por apellido + nombre. Se agrego a filtro la posibilidad de filtrar por apellido.

--- a/ProyectoTISJ-war/web/Curso/InformacionCurso.xhtml
+++ b/ProyectoTISJ-war/web/Curso/InformacionCurso.xhtml
@@ -195,8 +195,8 @@
                         <div title=" #{estudiante.value.cedulaUsuario}" class="item" style="width: 10%">
                             #{estudiante.value.cedulaUsuario}
                         </div>
-                        <div title="#{estudiante.value.nombreCompleto}" class="item" style="width: 10%">
-                            #{estudiante.value.nombreCompleto}
+                        <div title="#{estudiante.value.nombreCompletoPorApellido}" class="item" style="width: 10%">
+                            #{estudiante.value.nombreCompletoPorApellido}
                         </div>
                         <div title="#{estudiante.value.correoUsuario}" class="item" style="width: 15%">
                             #{estudiante.value.correoUsuario}
