Se agregaron anotaciones a Curso, Clase, Encuesta, Respuesta, RespuestaEncuesta y Evaluacion para remover en cascada. Se agregaron metodos y se realizaron los ajustes correspondientes en RegistarEncuesta y ListarEncuestas para seleccionar el semestre antes de generar la encuesta. Se agrego metodo y su implementacion en la vista web para eliminar un curso con datos ingresados (encuesta, clases, evaluaciones y respuestas a encuestas).

--- a/ProyectoTISJ-war/web/Curso/InformacionCurso.xhtml
+++ b/ProyectoTISJ-war/web/Curso/InformacionCurso.xhtml
@@ -228,7 +228,7 @@
                             </h:panelGroup>
                             <h:panelGroup rendered="#{login.rolSeleccionado == 'Administrador'}">
                                 <h:commandLink onclick="if (! confirm('Seguro que desea quitar el estudiante?')) return false"
-                                               id="btnRemover" action="#{informacionCurso.removerEstudiante(estudiante.value.idUsuario)}" class="SubmenuLink">
+                                               id="btnRemoverCurso" action="#{informacionCurso.removerEstudiante(estudiante.value.idUsuario)}" class="SubmenuLink">
                                     <div title="Remover Estudiante"  class="optionItem" style="background-image: url(../Resources/Images/RemoveUsrBlack.png)"></div>
                                 </h:commandLink>
                             </h:panelGroup>
