--- a/ProyectoTISJ-war/web/Encuesta/ImportarEncuesta.xhtml
+++ b/ProyectoTISJ-war/web/Encuesta/ImportarEncuesta.xhtml
@@ -32,9 +32,31 @@
                         </div>
                     </div>            
                 </c:forEach>
+                <h:message class="error" for="btnImpEncuesta"/>
+                <div id="openModal" class="modalDialog">
+                    <div style="width: 250px;">
+                        <a href="#close" title="Close" class="close">X</a>
+                        <h2> Seleccionar Semestre</h2>
+                        <div style="width: 100px; height: 100px">
+                            <h:selectOneListbox value="#{listarEncuesta.numeroSemestre}">
+                                <f:selectItem itemValue="1" itemLabel="Primer" />
+                                <f:selectItem itemValue="2" itemLabel="Segundo" />
+                                <f:selectItem itemValue="3" itemLabel="Tercer" />
+                                <f:selectItem itemValue="4" itemLabel="Cuarto" />
+                                <f:selectItem itemValue="5" itemLabel="Quinto" />
+                                <f:selectItem itemValue="6" itemLabel="Sexto" />
+                            </h:selectOneListbox>
+                        </div>
+                        <h:commandButton id="btnImpEncuesta" class="boton" value="Seleccionar">
+                            <f:ajax execute="@form" event="click" listener="#{listarEncuesta.importarEncuesta()}" render="@form" onevent="indicador" />
+                        </h:commandButton>
+                    </div>
+                </div>
                 
                 <div class="menuOpcion" >
-                    <h:commandButton class="boton" value="Seleccionar" action="#{listarEncuesta.importarEncuesta()}"/>
+                    <a href="#openModal">
+                        <div id="btnSelectSemestre" class="boton">Seleccionar Semestre</div>
+                    </a>
                 </div>
                 
             </h:form>
