Se ordeno alfabeticamente (por apellido) la lista de usuarios en la vista SeleccionarUsuario. Se corrigio error que no permitia crear todas las encuestas del semestre seleccionado en una unica instancia (se intentaba redirigir a la lista de encuestas luego de crear la primera y se producia IllegalStateException). Se corrigio error ortografico en mensaje de eliminacion de curso. Se retocaron tamaños de columnas en listarUsuarios y SeleccionarUsuarios para ver el nombre completo utilizando un nivel de zoom mas bajo.

--- a/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
+++ b/ProyectoTISJ-war/web/Curso/ListarCursos.xhtml
@@ -53,7 +53,7 @@
                                     <div title="Registrar Evaluacion" class="optionItem" style="background-image: url(../Resources/Images/EvaluateUsr.png)"></div>
                                 </a>
                                 <h:panelGroup rendered="#{login.rolSeleccionado == 'Administrador'}">
-                                    <h:commandLink onclick="if (! confirm('Seguro que desea quitar curso y todos los datos relacionados (Encuestas, Clases, Evaluacines)?')) return false"
+                                    <h:commandLink onclick="if (! confirm('Seguro que desea quitar este curso y todos los datos relacionados (Encuestas, Clases, Evaluaciones)?')) return false"
                                                    id="btnRemoverCurso" action="#{listarCursosBean.quitarCurso(curso.idCurso)}" class="SubmenuLink">
                                         <div title="Remover Curso"  class="optionItem" style="background-image: url(../Resources/Images/RemoveCurso.png)"></div>
                                     </h:commandLink>
