--- a/ProyectoTISJ-war/web/Curso/RegistrarClase.xhtml
+++ b/ProyectoTISJ-war/web/Curso/RegistrarClase.xhtml
@@ -43,8 +43,9 @@
                         <h:inputText id="inputTema" value="#{usuariosClase.temaClase}" class="Texto" required="true" requiredMessage="Debes ingresar un tema." p:placeholder="Tema"/>         
                     </div><h:message class="error" for="inputTema" id="msjTemaClase"/>
                 </div>
+                <h:message class="error" for="btnRegClase" id="msjRegClase"/>
                 <div class="menuOpcion" >
-                    <h:commandButton class="boton" value="Registrar Clase" >
+                    <h:commandButton id="btnRegClase" class="boton" value="Registrar Clase" >
                         <f:ajax execute="@form" event="click" listener="#{usuariosClase.registrarClase()}" render="@form" onevent="indicador" />
                     </h:commandButton>
                 </div>
