--- a/ProyectoTISJ-war/web/Encuesta/ImportarEncuesta.xhtml
+++ b/ProyectoTISJ-war/web/Encuesta/ImportarEncuesta.xhtml
@@ -13,7 +13,7 @@
         <div id="contenedor">            
             <h:panelGroup rendered="#{empty listarEncuesta.encuestas}">
                 <div class="ListItemContainer" >
-                    No hay Preguntas registrados.
+                    No hay Encuestas registrados.
                 </div>            
             </h:panelGroup>
             
